1.6.x/_sources/autodoc_testsuite_corepsi4.rst.txt

=======================================================   ============
Input File                                                Description 
=======================================================   ============
:srcsample:`omp3-grad2`                                   OMP3 cc-pVDZ gradient for the NO radical
:srcsample:`dct5`                                         DC-06 calculation for the O2 molecule (triplet ground state). This performs  geometry optimization using two-step and simultaneous solution of the  response equations for the analytic gradient.
:srcsample:`tdscf-7`                                      TD-HF test variable access
:srcsample:`nbody-freq`                                   Vibrational and thermo analysis of water trimer (geometry from J. Chem. Theory Comput. 11, 2126-2136 (2015))
:srcsample:`tdscf-4`                                      td-wb97x singlet excitation energies of methylene (tda)
:srcsample:`fnocc1`                                       Test QCISD(T) for H2O/cc-pvdz Energy
:srcsample:`fd-freq-gradient-large`                       SCF DZ finite difference frequencies by gradients for C4NH4
:srcsample:`dfomp2p5-2`                                   DF-OMP2.5 cc-pVDZ energy for the H2O+ cation
:srcsample:`tdscf-1`                                      td-uhf test on triplet states of methylene (rpa)
:srcsample:`zaptn-nh2`                                    ZAPT(n)/6-31G NH2 Energy Point, with n=2-25
:srcsample:`cubeprop`                                     RHF orbitals and density for water.
:srcsample:`cc40`                                         RHF-CC2-LR/cc-pVDZ optical rotation of H2O2.  gauge = length, omega= (589 355 nm)
:srcsample:`cc39`                                         RHF-CC2-LR/cc-pVDZ dynamic polarizabilities of HOF molecule.
:srcsample:`cc35`                                         CC3(ROHF)/cc-pVDZ H2O :math:`R_e` geom from Olsen et al., JCP 104, 8007 (1996)
:srcsample:`pywrap-checkrun-convcrit`                     Advanced python example sets different sets of scf/post-scf conv crit and check to be sure computation has actually converged to the expected accuracy.
:srcsample:`cc-module`                                    check that CC is returning the same values btwn CC*, FNOCC, and DFOCC modules
:srcsample:`cdomp2-2`                                     OMP2 cc-pVDZ energy for the NO molecule.
:srcsample:`fsapt-ext-abc-au`                             analog of fsapt-ext-abc with molecule and external potentials in Bohr
:srcsample:`opt2-fd`                                      SCF DZ allene geometry optimzation, with Cartesian input
:srcsample:`mints3`                                       Test individual integral objects for correctness.
:srcsample:`tdscf-5`                                      td-camb3lyp with DiskDF and method/basis specification
:srcsample:`tu2-ch2-energy`                               Sample UHF/6-31G** CH2 computation
:srcsample:`pywrap-align-chiral`                          testing aligner on enantiomers based on Table 1 of 10.1021/ci100219f aka J Chem Inf Model 2010 50(12) 2129-2140
:srcsample:`nbody-cp-gradient`                            Computation of CP-corrected water trimer gradient (geometry from J. Chem. Theory Comput. 11, 2126-2136 (2015))
:srcsample:`scf-property`                                 UFH and B3LYP cc-pVQZ properties for the CH2 molecule.
:srcsample:`cc13d`                                        Tests analytic CC2 gradients
:srcsample:`fsapt-terms`                                  F-SAPT0/jun-cc-pvdz procedure for methane dimer 
:srcsample:`sapt-dft2`                                    SAPT(DFT) aug-cc-pVDZ computation for the water dimer interaction energy.
:srcsample:`scf-hess5`                                    DF SCF 6-31G analytical vs finite-difference tests Tests DF UHF hessian code for Ca != Cb
:srcsample:`cc6`                                          Frozen-core CCSD(T)/cc-pVDZ on C4H4N anion with disk ao algorithm
:srcsample:`casscf-sa-sp`                                 Example of state-averaged CASSCF for the C2 molecule see C. D. Sherrill and P. Piecuch, J. Chem. Phys. 122, 124104 (2005)
:srcsample:`dft-custom-dhdf`                              DSD-PBEP86 S22 Ammonia test
:srcsample:`cubeprop-esp`                                 RHF orbitals and density for water.
:srcsample:`ci-property`                                  CI/MCSCF cc-pvDZ properties for Potassium nitrate (rocket fuel!)
:srcsample:`omp2p5-grad2`                                 OMP2.5 cc-pVDZ gradient for the NO radical
:srcsample:`opt1`                                         SCF STO-3G geometry optimzation, with Z-matrix input
:srcsample:`adc2`                                         ADC(2)/aug-cc-pVDZ on two water molecules that are distant from 1000 angstroms from each other
:srcsample:`pubchem2`                                     Superficial test of PubChem interface
:srcsample:`dft-b3lyp`                                    Check flavors of B3LYP (b3lyp3/b3lyp5) against other programs
:srcsample:`psimrcc-ccsd\_t-3`                            Mk-MRCCSD(T) single point. :math:`^1A_1` CH2 state described using the Ms = 0 component of the singlet.  Uses RHF singlet orbitals.
:srcsample:`gibbs`                                        Test Gibbs free energies at 298 K of N2, H2O, and CH4.
:srcsample:`cc7`                                          Tests CCENERGY's CCSD gradient in the presence of a dipole field
:srcsample:`casscf-fzc-sp`                                CASSCF/6-31G** energy point
:srcsample:`scf-guess-read1`                              Sample UHF/cc-pVDZ H2O computation on a doublet cation, using  RHF/cc-pVDZ orbitals for the closed-shell neutral as a guess
:srcsample:`cc24`                                         Single point gradient of 1-2B1 state of H2O+ with EOM-CCSD
:srcsample:`opt14`                                        6-31G(d) optimization of SF4 starting from linear bond angle that is not linear in the optimized structure but is in a  symmetry plane of the molecule.
:srcsample:`fci-h2o-2`                                    6-31G H2O Test FCI Energy Point
:srcsample:`adc1`                                         ADC(2)/6-31G** on H2O using builtin ADC module
:srcsample:`dct3`                                         DC-06 calculation for the He dimer. This performs a simultaneous update of the orbitals and cumulant, using DIIS extrapolation. Four-virtual integrals are handled in the AO Basis, using integrals stored on disk.
:srcsample:`scf4`                                         RHF cc-pVDZ energy for water, automatically scanning the symmetric stretch and bending coordinates using Python's built-in loop mechanisms.  The geometry is specified using a Z-matrix with variables that are updated during the potential energy surface scan, and then the same procedure is performed using polar coordinates, converted to Cartesian coordinates.
:srcsample:`mom-h2o-4`                                    MOM excitation from LUMO HOMO+4
:srcsample:`scf-freq1`                                    Analytic vs. finite difference DF-SCF frequency test for water.
:srcsample:`opt8`                                         Various constrained energy minimizations of HOOH with cc-pvdz RHF. Cartesian-coordinate constrained optimizations of HOOH in Cartesians.
:srcsample:`mp2-1`                                        All-electron MP2 6-31G** geometry optimization of water
:srcsample:`scf-guess`                                    Test initial SCF guesses on FH and FH+ in cc-pVTZ basis
:srcsample:`dfccd-grad1`                                  DF-CCSD cc-pVDZ gradients for the H2O molecule.
:srcsample:`cc11`                                         Frozen-core CCSD(ROHF)/cc-pVDZ on CN radical with disk-based AO algorithm
:srcsample:`dfscf-bz2`                                    Benzene Dimer DF-HF/cc-pVDZ
:srcsample:`cc49`                                         EOM-CC3(UHF) on CH radical with user-specified basis and properties for particular root
:srcsample:`dfomp2p5-grad2`                               DF-OMP2.5 cc-pVDZ gradients for the H2O+ cation.
:srcsample:`mp3-grad2`                                    MP3 cc-pVDZ gradient for the NO radical
:srcsample:`dct9`                                         UHF-ODC-12 and RHF-ODC-12 single-point energy for H2O. This performs a simultaneous update of orbitals and cumulants, using DIIS extrapolation. Four-virtual integrals are handled in the AO basis, where integral transformation is avoided. In the next RHF-ODC-12 computation, AO_BASIS=NONE is used, where four-virtual integrals are transformed into MO basis.
:srcsample:`rasci-c2-active`                              6-31G* C2 Test RASCI Energy Point, testing two different ways of specifying the active space, either with the ACTIVE keyword, or with RAS1, RAS2, RESTRICTED_DOCC, and RESTRICTED_UOCC
:srcsample:`freq-masses`                                  check nonphysical masses possible
:srcsample:`dft3`                                         DFT integral algorithms test, performing w-B97 RKS and UKS computations on water and its cation, using all of the different integral algorithms.  This tests both the ERI and ERF integrals.
:srcsample:`cbs-xtpl-freq`                                Various gradients for a strained helium dimer and water molecule
:srcsample:`scf6`                                         Tests RHF/ROHF/UHF SCF gradients
:srcsample:`opt13`                                        B3LYP cc-pVDZ geometry optimzation of phenylacetylene, starting from not quite linear structure updated reference due to new BraggSlater radii
:srcsample:`scf1`                                         RHF cc-pVQZ energy for the BH molecule, with Cartesian input.
:srcsample:`dfep2-2`                                      Compute three IP and 2 EA's for the PH3 molecule
:srcsample:`dft-dldf`                                     Dispersionless density functional (dlDF+D) internal match to Psi4 Extensive testing has been done to match supplemental info of Szalewicz et. al., Phys. Rev. Lett., 103, 263201 (2009) and Szalewicz et. al., J. Phys. Chem. Lett., 1, 550-555 (2010)
:srcsample:`cc13c`                                        Tests RHF CCSD(T)gradients
:srcsample:`omp2-grad2`                                   OMP2 cc-pVDZ gradient for the NO radical
:srcsample:`sapt8`                                        SAPT0(ROHF) open-shell computation of CN - Ne interaction energy First with jun-cc-pVDZ and density fitted integrals with ROHF Then with cc-pVDZ and direct integrals, except for dispersion  that is computed with cc-pVDZ-ri density fitting with ROHF.
:srcsample:`psimrcc-fd-freq1`                             Mk-MRCCSD single point. :math:`^3 \Sigma ^-` O2 state described using the Ms = 0 component of the triplet.  Uses ROHF triplet orbitals.
:srcsample:`mom`                                          Maximum Overlap Method (MOM) Test. MOM is designed to stabilize SCF convergence and to target excited Slater determinants directly.
:srcsample:`props2`                                       DF-SCF cc-pVDZ of benzene-hydronium ion, scanning the dissociation coordinate with Python's built-in loop mechanism. The geometry is specified by a Z-matrix with dummy atoms, fixed parameters, updated parameters, and separate charge/multiplicity specifiers for each monomer. One-electron properties computed for dimer and one monomer.
:srcsample:`castup1`                                      Test of SAD/Cast-up (mainly not dying due to file weirdness)
:srcsample:`fcidump`                                      test FCIDUMP functionality for rhf/uhf
:srcsample:`fnocc5`                                       Test FNO-DF-CCSD(T) energy
:srcsample:`cepa3`                                        cc-pvdz H2O Test coupled-pair CISD against DETCI CISD
:srcsample:`cc12`                                         Single point energies of multiple excited states with EOM-CCSD
:srcsample:`extern1`                                      External potential calculation involving a TIP3P water and a QM water. Finite different test of the gradient is performed to validate forces.
:srcsample:`fnocc4`                                       Test FNO-DF-CCSD(T) energy
:srcsample:`fd-freq-energy-large`                         SCF DZ finite difference frequencies by energies for C4NH4
:srcsample:`cc54`                                         CCSD dipole with user-specified basis set
:srcsample:`dft-grad-lr2`                                 Tests CAM gradients with and without XC pieces to narrow grid error
:srcsample:`sapt-dft1`                                    SAPT(DFT) aug-cc-pVDZ interaction energy between Ne and Ar atoms.
:srcsample:`fci-h2o-fzcv`                                 6-31G H2O Test FCI Energy Point
:srcsample:`pywrap-alias`                                 Test parsed and exotic calls to energy() like zapt4, mp2.5, and cisd are working
:srcsample:`cc4a`                                         RHF-CCSD(T) cc-pVQZ frozen-core energy of the BH molecule, with Cartesian input. This version tests the FROZEN_DOCC option explicitly
:srcsample:`sad1`                                         Test of the superposition of atomic densities (SAD) guess, using a highly distorted water geometry with a cc-pVDZ basis set.  This is just a test of the code and the user need only specify guess=sad to the SCF module's (or global) options in order to use a SAD guess. The test is first performed in C2v symmetry, and then in C1.
:srcsample:`psimrcc-pt2`                                  Mk-MRPT2 single point. :math:`^1A_1` F2 state described using the Ms = 0 component of the singlet.  Uses TCSCF singlet orbitals.
:srcsample:`dfmp2-freq1`                                  DF-MP2 frequency by difference of energies for H2O
:srcsample:`cc51`                                         EOM-CC3/cc-pVTZ on H2O
:srcsample:`rasci-h2o`                                    RASCI/6-31G** H2O Energy Point
:srcsample:`ddd-deriv`                                    Sample HF/cc-pVDZ H2O computation all derivatives
:srcsample:`scf-auto-cholesky`                            Cholesky filter a complete basis
:srcsample:`sapt-dft-lrc`                                 SAPT(DFT) aug-cc-pVDZ interaction energy between Ne and Ar atoms.
:srcsample:`castup3`                                      SCF with various combinations of pk/density-fitting, castup/no-castup, and spherical/cartesian settings. Demonstrates that puream setting is getting set by orbital basis for all df/castup parts of calc. Demonstrates that answer doesn't depend on presence/absence of castup. Demonstrates (by comparison to castup2) that output file doesn't depend on options (scf_type) being set global or local. This input uses local.
:srcsample:`cc50`                                         EOM-CC3(ROHF) on CH radical with user-specified basis and properties for particular root
:srcsample:`sapt-dft-api`                                 SAPT(DFT) aug-cc-pVDZ interaction energy between Ne and Ar atoms.
:srcsample:`freq-isotope1`                                Vibrational and thermo analysis of several water isotopologs. Demonstrates Hessian reuse for different temperatures and pressures but not for different isotopologs.
:srcsample:`dft-pbe0-2`                                   Internal match to psi4, test to match to literature values in litref.in/litref.out
:srcsample:`dft-grad-meta`                                meta-GGA gradients of water and ssh molecules reference gradients updated due to new BraggSlater radii
:srcsample:`dft-freq`                                     Frequencies for H2O B3LYP/6-31G* at optimized geometry
:srcsample:`pywrap-cbs1`                                  Various basis set extrapolation tests
:srcsample:`mp2p5-grad2`                                  MP2.5 cc-pVDZ gradient for the NO radical
:srcsample:`dct10`                                        The multiple guesses for DCT amplitudes for ODC-12.
:srcsample:`tu6-cp-ne2`                                   Example potential energy surface scan and CP-correction for Ne2
:srcsample:`dct-grad4`                                    Unrestricted DF-DCT ODC-12 gradient for O2 with cc-pVTZ/cc-pVTZ-RI standard/auxiliary basis set
:srcsample:`fsapt-ext`                                    Quick test of external potential in F-SAPT (see fsapt1 for a real example)
:srcsample:`props4`                                       Electrostatic potential and electric field evaluated on a grid around water.
:srcsample:`cc4`                                          RHF-CCSD(T) cc-pVQZ frozen-core energy of the BH molecule, with Cartesian input. After the computation, the checkpoint file is renamed, using the PSIO handler.
:srcsample:`cc38`                                         RHF-CC2-LR/cc-pVDZ static polarizabilities of HOF molecule.
:srcsample:`cc5`                                          RHF CCSD(T) aug-cc-pvtz frozen-core energy of C4NH4 Anion
:srcsample:`ghosts`                                       Density fitted MP2 cc-PVDZ/cc-pVDZ-RI computation of formic acid dimer binding energy using explicit specification of ghost atoms.  This is equivalent to the dfmp2_1 sample but uses both (equivalent) specifications of ghost atoms in a manual counterpoise correction.
:srcsample:`mom-h2o-3`                                    MOM excitation from LUMO HOMO+3
:srcsample:`psimrcc-ccsd\_t-4`                            Mk-MRCCSD(T) single point. :math:`^1A_1` O$_3` state described using the Ms = 0 component of the singlet.  Uses TCSCF orbitals.
:srcsample:`rasscf-sp`                                    6-31G** H2O Test RASSCF Energy Point will default to only singles and doubles in the active space
:srcsample:`sapt10`                                       usapt example with empty beta due to frozen core
:srcsample:`tu5-sapt`                                     Example SAPT computation for ethene*ethine (i.e., ethylene*acetylene), test case 16 from the S22 database
:srcsample:`cc33`                                         CC3(UHF)/cc-pVDZ H2O :math:`R_e` geom from Olsen et al., JCP 104, 8007 (1996)
:srcsample:`molden1`                                      Test of the superposition of atomic densities (SAD) guess, using a highly distorted water geometry with a cc-pVDZ basis set.  This is just a test of the code and the user need only specify guess=sad to the SCF module's (or global) options in order to use a SAD guess. The test is first performed in C2v symmetry, and then in C1.
:srcsample:`pywrap-bfs`                                   apply linear fragmentation algorithm to a water cluster
:srcsample:`tu4-h2o-freq`                                 Optimization followed by frequencies H2O HF/cc-pVDZ
:srcsample:`casscf-semi`                                  CASSCF/6-31G** energy point. Check energy with frozen core/virtual orbs. after semicanonicalization.
:srcsample:`dct-grad3`                                    Restricted DF-DCT ODC-12 gradient for ethylene with cc-pVDZ/cc-pVDZ-RI standard/auxiliary basis set
:srcsample:`sapt4`                                        SAPT2+(3) aug-cc-pVDZ computation of the formamide dimer interaction energy, using the aug-cc-pVDZ-JKFIT DF basis for SCF and aug-cc-pVDZ-RI  for SAPT. This example uses frozen core as well as MP2 natural orbital  approximations.
:srcsample:`fci-tdm`                                      He2+ FCI/cc-pVDZ Transition Dipole Moment
:srcsample:`pywrap-all`                                   Intercalls among python wrappers- database, cbs, optimize, energy, etc. Though each call below functions individually, running them all in sequence or mixing up the sequence is aspirational at present. Also aspirational is using the intended types of gradients.
:srcsample:`opt1-fd`                                      SCF STO-3G geometry optimzation, with Z-matrix input, by finite-differences
:srcsample:`dfccdl1`                                      DF-CCDL cc-pVDZ energy for the H2O molecule.
:srcsample:`sapt0-d`                                      Tests SAPT0-D corrections, with a variety of damping functions/parameters
:srcsample:`cc5a`                                         RHF CCSD(T) STO-3G frozen-core energy of C4NH4 Anion
:srcsample:`sad-scf-type`                                 Test SAD SCF guesses on noble gas atom
:srcsample:`scf-response1`                                Compute the dipole, quadrupole, and traceless quadrupoles for water.
:srcsample:`cc19`                                         CCSD/cc-pVDZ dipole polarizability at two frequencies
:srcsample:`omp3-1`                                       OMP3 cc-pVDZ energy for the H2O molecule
:srcsample:`cubeprop-frontier`                            ROHF frontier orbitals of CH2(s) and CH2(t).
:srcsample:`cbs-xtpl-wrapper`                             RHF aug-cc-pVQZ energy for the BH molecule, with Cartesian input. Various gradients for a strained helium dimer and water molecule
:srcsample:`x2c1`                                         Test of SFX2C-1e on water uncontracted cc-pVDZ-DK The reference numbers are from Lan Cheng's implementation in Cfour
:srcsample:`cbs-xtpl-nbody`                               RHF interaction energies using nbody and cbs parts of the driver Ne dimer with mp2/v[dt]z + d:ccsd(t)/vdz
:srcsample:`sapt1`                                        SAPT0 cc-pVDZ computation of the ethene-ethyne interaction energy, using the cc-pVDZ-JKFIT RI basis for SCF and cc-pVDZ-RI for SAPT.  Monomer geometries are specified using Cartesian coordinates.
:srcsample:`cisd-h2o-clpse`                               6-31G** H2O Test CISD Energy Point with subspace collapse
:srcsample:`dfomp3-2`                                     DF-OMP3 cc-pVDZ energy for the H2O+ cation
:srcsample:`dft-custom-gga`                               DFT (LDA/GGA) test of custom implementations in: gga_superfuncs.py
:srcsample:`omp2p5-2`                                     OMP2.5 cc-pVDZ energy for the H2O molecule.
:srcsample:`mbis-6`                                       MBIS calculation on H2O
:srcsample:`sapt-exch-ind-inf`                            SAPT(DFT) aug-cc-pVDZ interaction energy between Ne and Ar atoms.
:srcsample:`sapt11`                                       sapt example with orbital freezing with alkali metal and dMP2
:srcsample:`dfomp3-grad1`                                 DF-OMP3 cc-pVDZ gradients for the H2O molecule.
:srcsample:`cbs-xtpl-energy-conv`                         Extrapolated water energies - conventional integrals version
:srcsample:`dfomp2-grad2`                                 OMP2 cc-pVDZ energy for the NO molecule.
:srcsample:`dlpnomp2-2`                                   comparison of DF-MP2 and DLPNO-MP2 with a CBS extrapolation
:srcsample:`ci-multi`                                     BH single points, checking that program can run multiple instances of  DETCI in a single input, without an intervening clean() call
:srcsample:`dfmp2-fc`                                     Kr--Kr nocp energies with all-electron basis set to check frozen core
:srcsample:`olccd1`                                       OLCCD cc-pVDZ energy for the H2O molecule.
:srcsample:`nbody-he-4b`                                  MP2/aug-cc-pvDZ many body energies of an arbitrary Helium complex, addressing 4-body formulas
:srcsample:`x2c2`                                         Test of SFX2C-1e on Water cc-pVDZ-DK.  In this test the Dirac equation is solved in the uncontracted cc-pVDZ-DK basis. The reference numbers are from Lan Cheng's implementation in Cfour
:srcsample:`opt-freeze-coords`                            SCF/cc-pVDZ optimization example with frozen cartesian
:srcsample:`dfmp2-grad2`                                  DF-MP2 cc-pVDZ gradient for the NO molecule.
:srcsample:`scf-guess-read3`                              Test if the the guess read in the same basis converges. 
:srcsample:`dfmp2-1`                                      Density fitted MP2 cc-PVDZ/cc-pVDZ-RI computation of formic acid dimer binding energy using automatic counterpoise correction.  Monomers are specified using Cartesian coordinates.
:srcsample:`stability2`                                   ROHF stability analysis check for CN with cc-pVDZ. This test corresponds to the rohf-stab test from Psi3.
:srcsample:`opt12`                                        SCF cc-pVDZ geometry optimzation of ketene, starting from bent structure
:srcsample:`omp2-4`                                       SCS-OMP2 cc-pVDZ geometry optimization for the H2O molecule.
:srcsample:`tdscf-3`                                      td-wb97x excitation energies of singlet states of h2o, wfn passing
:srcsample:`isapt2`                                       This is a shorter version if isapt1 - does not do cube plots. See isapt1 for full details
:srcsample:`cc30`                                         CCSD/sto-3g optical rotation calculation (length gauge only) at two frequencies on methyloxirane
:srcsample:`cbs-xtpl-func`                                optimization with method defined via cbs
:srcsample:`cc42`                                         RHF-CC2-LR/STO-3G optical rotation of (S)-methyloxirane.  gauge = length, omega = (589 355 nm)
:srcsample:`rasci-ne`                                     Ne atom RASCI/cc-pVQZ  Example of split-virtual CISD[TQ] from Sherrill and Schaefer, J. Phys. Chem. XXX This uses a "primary" virtual space 3s3p (RAS 2), a "secondary" virtual space 3d4s4p4d4f (RAS 3), and a "tertiary" virtual space consisting of the remaining virtuals.  First, an initial CISD computation is run to get the natural orbitals; this allows a meaningful partitioning of the virtual orbitals into groups of different importance.  Next, the RASCI is run.  The split-virtual CISD[TQ] takes all singles and doubles, and all triples and quadruples with no more than 2 electrons in the secondary virtual subspace (RAS 3).  If any electrons are present in the tertiary virtual subspace (RAS 4), then that excitation is only allowed if it is a single or double.
:srcsample:`props3`                                       DF-SCF cc-pVDZ multipole moments of benzene, up to 7th order and electrostatic potentials evaluated at the nuclear coordinates
:srcsample:`cc17`                                         Single point energies of multiple excited states with EOM-CCSD
:srcsample:`omp2-1`                                       OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`pywrap-db2`                                   Database calculation, run in sow/reap mode.
:srcsample:`cisd-opt-fd`                                  H2O CISD/6-31G** Optimize Geometry by Energies
:srcsample:`olccd-freq1`                                  OLCCD cc-pVDZ freqs for C2H2
:srcsample:`sapt9`                                        usapt example with empty beta
:srcsample:`dfmp2-grad4`                                  DF-MP2 cc-pVDZ gradient for the NO molecule.
:srcsample:`lccd-grad1`                                   LCCD cc-pVDZ gradient for the H2O molecule.
:srcsample:`psimrcc-fd-freq2`                             Mk-MRCCSD frequencies. :math:`^1A_1` O$_3` state described using the Ms = 0 component of the singlet.  Uses TCSCF orbitals.
:srcsample:`scf-guess-read2`                              Test if the the guess read in the same basis converges. 
:srcsample:`cc23`                                         ROHF-EOM-CCSD/DZ analytic gradient lowest :math:`^{2}B_1` state of H2O+ (A1 excitation)
:srcsample:`dfomp2p5-grad1`                               DF-OMP2.5 cc-pVDZ gradients for the H2O molecule.
:srcsample:`scf-hess3`                                    CONV SCF 6-31G analytical vs finite-difference tests Tests UHF hessian code for Ca != Cb
:srcsample:`cc28`                                         CCSD/cc-pVDZ optical rotation calculation (length gauge only) on Z-mat H2O2
:srcsample:`pywrap-freq-g-sowreap`                        Finite difference of gradients frequency, run in sow/reap mode.
:srcsample:`cc14`                                         ROHF-CCSD/cc-pVDZ :math:`^{3}B_1` CH2 geometry optimization via analytic gradients
:srcsample:`mbis-1`                                       MBIS calculation on H2O
:srcsample:`phi-ao`                                       Test computing values of basis functions (puream and non-puream) at points
:srcsample:`props1`                                       RHF STO-3G dipole moment computation, performed by applying a finite electric field and numerical differentiation.
:srcsample:`sapt-sf1`                                     Tests the Psi4 SF-SAPT code
:srcsample:`dft-ghost`                                    DFT Functional Test for Range-Seperated Hybrids and Ghost atoms
:srcsample:`cc47`                                         EOM-CCSD/cc-pVDZ on H2O2 with two excited states in each irrep
:srcsample:`scf11-freq-from-energies`                     Test frequencies by finite differences of energies for planar C4NH4 TS
:srcsample:`scf-hess4`                                    DF SCF 6-31G UHFl vs RHF test Tests DF UHF hessian code for Ca = Cb
:srcsample:`cc13`                                         UHF-CCSD/cc-pVDZ :math:`^{3}B_1` CH2 geometry optimization via analytic gradients
:srcsample:`cc53`                                         Matches Table II a-CCSD(T)/cc-pVDZ H2O @ 2.5 * Re value from Crawford and Stanton,  IJQC 98, 601-611 (1998).
:srcsample:`nbody-hessian`                                Computation of VMFC-corrected HF dimer Hessian 
:srcsample:`opt-irc-1`                                    Compute the IRC for HOOH torsional rotation at the RHF/DZP level of theory. 
:srcsample:`opt11`                                        Transition-state optimizations of HOOH to both torsional transition states.
:srcsample:`dft-dsd`                                      DSD S22 Ammonia test
:srcsample:`cc45`                                         RHF-EOM-CC2/cc-pVDZ lowest two states of each symmetry of H2O.
:srcsample:`pywrap-molecule`                              Check that C++ Molecule class and qcdb molecule class are reading molecule input strings identically
:srcsample:`olccd2`                                       OLCCD cc-pVDZ energy with B3LYP initial guess for the NO radical
:srcsample:`cc46`                                         EOM-CC2/cc-pVDZ on H2O2 with two excited states in each irrep
:srcsample:`dft2`                                         DFT Functional Test
:srcsample:`mp3-grad1`                                    MP3 cc-pVDZ gradient for the H2O molecule.
:srcsample:`sapt6`                                        checks that all SAPT physical components (elst, exch, indc, disp) and total IE are being computed correctly for SAPT2+3(CCD)dMP2/aug-cc-pvdz and all lesser methods thereof.
:srcsample:`omp3-grad1`                                   OMP3 cc-pVDZ gradient for the H2O molecule.
:srcsample:`aediis-1`                                     ADIIS test case, from 10.1063/1.3304922 
:srcsample:`mints-benchmark`                              run some BLAS benchmarks
:srcsample:`density-screen-2`                             RKS Density Matrix based-Integral Screening Test for benzene
:srcsample:`dfccsdt1`                                     DF-CCSD(T) cc-pVDZ energy for the H2O molecule.
:srcsample:`scf-ecp`                                      Water-Argon complex with ECP present; check of energies and forces.
:srcsample:`sapt-exch-ind30-inf`                          SAPT2+3 with S^inf exch-ind30 Geometries taken from the S66x10 database, the shortest-range point (R = 0.7 R_e)
:srcsample:`frac-sym`                                     Fractional occupation with symmetry
:srcsample:`dfccsd-t-grad1`                               DF-CCSD(T) cc-pVDZ gradients for the H2O molecule.
:srcsample:`cc41`                                         RHF-CC2-LR/cc-pVDZ optical rotation of H2O2.  gauge = both, omega = (589 355 nm)
:srcsample:`dct-grad2`                                    RHF-ODC-12 analytic gradient computations for H2O use AO_BASIS=DISK and AO_BASIS=NONE, respectively.  RHF-ODC-06 analytic gradient computations for H2O use AO_BASIS=DISK and AO_BASIS=NONE, respectively. 
:srcsample:`opt-multi-dimer-c2h`                          Multi-fragment opt of C2h methane dimer with user-combined reference points.
:srcsample:`options1`                                     check all variety of options parsing
:srcsample:`dfccsd1`                                      DF-CCSD cc-pVDZ energy for the H2O molecule.
:srcsample:`mbis-2`                                       MBIS calculation on OH- (Expanded Arrays)
:srcsample:`scf-bz2`                                      Benzene Dimer Out-of-Core HF/cc-pVDZ
:srcsample:`fnocc3`                                       Test FNO-QCISD(T) computation
:srcsample:`dft-omega`                                    Test omega is setable updated wb97x_20,wb97x_03 to account for new BraggSlater radii
:srcsample:`cepa-module`                                  routing check on lccd, lccsd, cepa(0).
:srcsample:`opt6`                                         Various constrained energy minimizations of HOOH with cc-pvdz RHF Internal-coordinate constraints in internal-coordinate optimizations.
:srcsample:`dfomp2p5-1`                                   DF-OMP2.5 cc-pVDZ energy for the H2O molecule.
:srcsample:`cc8a`                                         ROHF-CCSD(T) cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the CN radical, with Cartesian input.
:srcsample:`scf-dipder`                                   Test SCF dipole derivatives against old Psi3 reference values
:srcsample:`tu3-h2o-opt`                                  Optimize H2O HF/cc-pVDZ
:srcsample:`dft-dens-cut`                                 LibXC density screening test. Tests empty, C-only, X-only and XC superfunctionals. 'super_mix' showcases how to use different screening values for X and C parts. SCF will fail or crash (nans) without screening!
:srcsample:`aediis-2`                                     EDIIS test case from 10.1063/1.1470195
:srcsample:`cc56`                                         EOM-CCSD/6-31g excited state transition data for water cation
:srcsample:`scf-uhf-grad-nobeta`                          UHF gradient for a one-electron system (no beta electrons).
:srcsample:`dfomp3-grad2`                                 DF-OMP3 cc-pVDZ gradients for the H2O+ cation.
:srcsample:`dfmp2-grad5`                                  Tests DF-MP2 gradient in the presence of a dipole field
:srcsample:`dfmp2-grad3`                                  DF-MP2 cc-pVDZ gradients for the H2O molecule.
:srcsample:`scf-response2`                                Compute the dipole polarizability for water with custom basis set.
:srcsample:`sapt7`                                        SAPT0 open-shell computation of H2O-HO2 interaction energy First with cc-pVDZ and density fitted integrals with UHF Then with 6-31g and direct integrals, except for dispersion  that is computed with cc-pVDZ-ri density fitting with UHF.
:srcsample:`scf5`                                         Test of all different algorithms and reference types for SCF, on singlet and triplet O2, using the cc-pVTZ basis set.
:srcsample:`dft-grad2`                                    DF-BP86-D2 cc-pVDZ frozen core gradient of S22 HCN updated ref gradient due to new BraggSlater radii
:srcsample:`dft-custom-hybrid`                            DFT (hybrids) test of implementations in: hybrid_superfuncs.py
:srcsample:`scf-ecp3`                                     Water-Argon complex with ECP present; check of UHF Hessian
:srcsample:`dft-smoke`                                    DFT Functional Smoke Test
:srcsample:`dfcasscf-sp`                                  CASSCF/6-31G** energy point
:srcsample:`nbody-he-cluster`                             MP2/aug-cc-pv[DT]Z many body energies of an arbitrary Helium complex Size vs cost tradeoff is rough here
:srcsample:`dfomp3-1`                                     DF-OMP3 cc-pVDZ energy for the H2O molecule.
:srcsample:`fsapt-allterms`                               This test case shows an example of running and analyzing a standard F-SAPT0/jun-cc-pvdz procedure for HSG-18-dimer from the HSG database.
:srcsample:`nbo`                                          Generation of NBO file
:srcsample:`tdscf-6`                                      td-camb3lyp with DiskDF and method/basis specification
:srcsample:`mpn-bh`                                       MP(n)/aug-cc-pVDZ BH Energy Point, with n=2-19.  Compare against  M. L. Leininger et al., J. Chem. Phys. 112, 9213 (2000)
:srcsample:`stability1`                                   UHF->UHF stability analysis test for BH with cc-pVDZ Test direct SCF with and without symmetry, test PK without symmetry
:srcsample:`mcscf1`                                       ROHF 6-31G** energy of the :math:`^{3}B_1`  state of CH2, with Z-matrix input. The occupations are specified explicitly.
:srcsample:`dfccsdl1`                                     DF-CCSDL cc-pVDZ energy for the H2O molecule.
:srcsample:`scf2`                                         RI-SCF cc-pVTZ energy of water, with Z-matrix input and cc-pVTZ-RI auxilliary basis.
:srcsample:`opt-irc-2`                                    Compute the IRC for HCN <-> NCH interconversion at the RHF/DZP level of theory.
:srcsample:`dfccd1`                                       DF-CCD cc-pVDZ energy for the H2O molecule.
:srcsample:`mints15`                                      check SP basis Fortran exponent parsing
:srcsample:`cc32`                                         CC3/cc-pVDZ H2O :math:`R_e` geom from Olsen et al., JCP 104, 8007 (1996)
:srcsample:`cc16`                                         ROHF and UHF-B-CCD(T)/cc-pVDZ :math:`^{3}B_1` CH2 single-point energy (fzc, MO-basis :math:`\langle ab|cd \rangle` )
:srcsample:`dfomp2-3`                                     OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`mp2p5-grad1`                                  MP2.5 cc-pVDZ gradient for the H2O molecule.
:srcsample:`mints10`                                      H2 with tiny basis set, to test basis set parser's handling of integers
:srcsample:`scf-occ`                                      force occupations in scf
:srcsample:`x2c-perturb-h`                                Test SFX2C-1e with a static electric field on He aug-cc-pVTZ
:srcsample:`cisd-h2o+-1`                                  6-31G** H2O+ Test CISD Energy Point
:srcsample:`dft-custom`                                   DFT custom functional test
:srcsample:`omp2p5-grad1`                                 OMP2.5 cc-pVDZ gradient for the H2O molecule.
:srcsample:`cc22`                                         ROHF-EOM-CCSD/DZ on the lowest two states of each irrep in :math:`^{3}B_1` CH2.
:srcsample:`dfcasscf-sa-sp`                               Example of state-averaged CASSCF for the C2 molecule
:srcsample:`decontract`                                   RHF/cc-pvdz-decontract HCl single-point energy  Testing the in line -decontract option for basis sets
:srcsample:`dct8`                                         DCT calculation for the NH3+ radical using the ODC-12 and ODC-13 functionals. This performs both simultaneous and QC update of the orbitals and cumulant using DIIS extrapolation. Four-virtual integrals are first handled in the MO Basis for the first two energy computations. In the next computation ao_basis=disk algorithm is used, where the transformation of integrals for  four-virtual case is avoided. 
:srcsample:`cc52`                                         CCSD Response for H2O2
:srcsample:`molden2`                                      Test of the superposition of atomic densities (SAD) guess, using a highly distorted water geometry with a cc-pVDZ basis set.  This is just a test of the code and the user need only specify guess=sad to the SCF module's (or global) options in order to use a SAD guess. The test is first performed in C2v symmetry, and then in C1.
:srcsample:`dft-psivar`                                   HF and DFT variants single-points on zmat methane, mostly to test that    PSI variables are set and computed correctly.   Now also testing that CSX harvesting PSI variables correctly   update ref_dft_2e/xc due to new BraggSlater radii
:srcsample:`mints9`                                       A test of the basis specification.  Various basis sets are specified outright and in blocks, both orbital and auxiliary. Constructs libmints BasisSet objects through the constructor that calls qcdb.BasisSet infrastructure. Checks that the resulting bases are of the right size and checks that symmetry of the Molecule observes the basis assignment to atoms.
:srcsample:`cisd-h2o+-0`                                  6-31G** H2O+ Test CISD Energy Point
:srcsample:`dft-reference`                                MP2 with a PBE0 reference computation
:srcsample:`nbody-nocp-gradient`                          Computation of NoCP-corrected water trimer gradient (geometry from J. Chem. Theory Comput. 11, 2126-2136 (2015))
:srcsample:`dlpnomp2-1`                                   comparison of DF-MP2 and DLPNO-MP2
:srcsample:`linK-1`                                       RHF Linear Exchange Algorithm test for water
:srcsample:`omp3-5`                                       SOS-OMP3 cc-pVDZ geometry optimization for the H2O molecule.
:srcsample:`cisd-h2o+-2`                                  6-31G** H2O+ Test CISD Energy Point
:srcsample:`dfomp2-2`                                     OMP2 cc-pVDZ energy for the NO molecule.
:srcsample:`cc27`                                         Single point gradient of 1-1B2 state of H2O with EOM-CCSD
:srcsample:`psithon2`                                     Accesses basis sets, databases, plugins, and executables in non-install locations
:srcsample:`mcscf2`                                       TCSCF cc-pVDZ  energy of asymmetrically displaced ozone, with Z-matrix input.
:srcsample:`tdscf-2`                                      td-uhf test on triplet states of methylene (tda), wfn passing
:srcsample:`mp2-h`                                        check that methods can act on single atom
:srcsample:`linK-2`                                       RKS Linear Exchange Algorithm test for benzene
:srcsample:`nbody-intermediates`                          HF/cc-pVDZ many body energies of an arbitrary noble gas trimer complex Size vs cost tradeoff is rough here
:srcsample:`pywrap-checkrun-rohf`                         This checks that all energy methods can run with a minimal input and set symmetry.
:srcsample:`fsapt-ext-abc2`                               FSAPT with external charge on dimer
:srcsample:`fd-freq-energy`                               SCF STO-3G finite-difference frequencies from energies for H2O
:srcsample:`dft-grad1`                                    DF-BP86-D2 cc-pVDZ frozen core gradient of S22 HCN update ref gradient due to new BraggSlater radii
:srcsample:`opt-full-hess-every`                          SCF/sto-3g optimization with a hessian every step
:srcsample:`fsaptd-terms`                                 F-SAPT0/jun-cc-pvdz procedure for methane dimer 
:srcsample:`dft-jk`                                       DFT JK on-disk test
:srcsample:`fd-freq-gradient`                             SCF STO-3G finite-differences frequencies from gradients for H2O
:srcsample:`cc15`                                         RHF-B-CCD(T)/6-31G** H2O single-point energy (fzc, MO-basis :math:`\langle ab|cd \rangle`\ )
:srcsample:`cc55`                                         EOM-CCSD/6-31g excited state transition data for water with two excited states per irrep
:srcsample:`cc13b`                                        Tests RHF CCSD(T)gradients
:srcsample:`freq-isotope2`                                Vibrational and thermo analysis of several water isotopologs. Demonstrates Hessian reuse for different temperatures, pressures, and isotopologs
:srcsample:`cc26`                                         Single-point gradient, analytic and via finite-differences of 2-1A1 state of H2O with EOM-CCSD
:srcsample:`dct1`                                         DC-06, DC-12, ODC-06 and ODC-12 calculation for the He dimer. This performs a simultaneous update of the orbitals and cumulant, using DIIS extrapolation. Four-virtual integrals are handled in the MO Basis.
:srcsample:`olccd-grad2`                                  OLCCD cc-pVDZ gradient for the NO radical
:srcsample:`omp2-3`                                       OMP2 cc-pVDZ energy for the NO radical
:srcsample:`pywrap-basis`                                 SAPT calculation on bimolecular complex where monomers are unspecified so driver auto-fragments it. Basis set and auxiliary basis sets are assigned by atom type.
:srcsample:`cbs-xtpl-energy`                              Extrapolated water energies - density-fitted version
:srcsample:`pywrap-db1`                                   Database calculation, so no molecule section in input file. Portions of the full databases, restricted by subset keyword, are computed by sapt0 and dfmp2 methods.
:srcsample:`dfmp2-grad1`                                  DF-MP2 cc-pVDZ gradients for the H2O molecule.
:srcsample:`dct6`                                         DCT calculation for the triplet O2 using DC-06 and DC-12. Only two-step algorithm is tested.
:srcsample:`explicit-am-basis`                            Check that basis sets can be input with explicit angular momentum format
:srcsample:`cc29`                                         CCSD/cc-pVDZ optical rotation calculation (both gauges) on Cartesian H2O2
:srcsample:`dft-grac`                                     Gradient regularized asymptotic correction (GRAC) test.
:srcsample:`dct4`                                         DCT calculation for the HF+ using DC-06 functional. This performs both two-step and simultaneous update of the orbitals and cumulant using DIIS extrapolation. Four-virtual integrals are first handled in the MO Basis for the first two energy computations. In the next two the ao_basis=disk algorithm is used, where the transformation of integrals for  four-virtual case is avoided.  The computation is then repeated using the DC-12 functional with the same algorithms.
:srcsample:`pywrap-db3`                                   Test that Python Molecule class processes geometry like psi4 Molecule class.
:srcsample:`psimrcc-ccsd\_t-1`                            Mk-MRCCSD(T) single point. :math:`^1A_1` CH2 state described using the Ms = 0 component of the singlet.  Uses RHF singlet orbitals.
:srcsample:`scf-cholesky-basis`                           incremental Cholesky filtered SCF
:srcsample:`cc9`                                          UHF-CCSD(T) cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the CN radical, with Z-matrix input.
:srcsample:`opt4`                                         SCF cc-pVTZ geometry optimzation, with Z-matrix input
:srcsample:`dfep2-1`                                      Compute three IP and 2 EA's for the PH3 molecule
:srcsample:`cc8c`                                         ROHF-CCSD cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the  CN radical, with Cartesian input.
:srcsample:`dfmp2-4`                                      conventional and density-fitting mp2 test of mp2 itself and setting scs-mp2
:srcsample:`soscf-large`                                  Second-order SCF convergnece: Benzene
:srcsample:`omp2-2`                                       OMP2 cc-pVDZ energy with ROHF initial guess orbitals for the NO radical
:srcsample:`scf7`                                         Tests SCF gradient in the presence of a dipole field
:srcsample:`linK-3`                                       UHF and ROHF Linear Exchange Algorithm test for benzyl cation
:srcsample:`scf-hess2`                                    UHF STO-3G (Cartesian) and cc-pVDZ (spherical) water Hessian test, against Psi3 reference values. This test should match RHF values exactly
:srcsample:`mp2-property`                                 MP2 cc-pvDZ properties for Nitrogen oxide
:srcsample:`cbs-xtpl-opt`                                 Various extrapolated optimization methods for the H2 molecule
:srcsample:`dft1-alt`                                     DFT Functional Test
:srcsample:`opt9`                                         Various constrained energy minimizations of HOOH with cc-pvdz RHF. Cartesian-coordinate constrained optimizations of HOOH in internals.
:srcsample:`opt5`                                         6-31G** UHF CH2 3B1 optimization.  Uses a Z-Matrix with dummy atoms, just for demo and testing purposes.
:srcsample:`nbody-vmfc-hessian`                           Computation of VMFC-corrected water trimer Hessian (geometry from J. Chem. Theory Comput. 11, 2126-2136 (2015))
:srcsample:`mints4`                                       A demonstration of mixed Cartesian/ZMatrix geometry specification, using variables, for the benzene-hydronium complex.  Atoms can be placed using ZMatrix coordinates, whether they belong to the same fragment or not.  Note that the Cartesian specification must come before the ZMatrix entries because the former define absolute positions, while the latter are relative.
:srcsample:`frac-ip-fitting`                              Omega optimization for LRC functional wB97 on water
:srcsample:`opt2`                                         SCF DZ allene geometry optimization, with Cartesian input, first in c2v symmetry, then in Cs symmetry from a starting point with a non-linear central bond angle.
:srcsample:`fci-h2o`                                      6-31G H2O Test FCI Energy Point
:srcsample:`cc21`                                         ROHF-EOM-CCSD/DZ analytic gradient lowest :math:`^{2}A_1` excited state of H2O+ (B1 excitation)
:srcsample:`psimrcc-ccsd\_t-2`                            Mk-MRCCSD(T) single point. :math:`^1A_1` CH2 state described using the Ms = 0 component of the singlet.  Uses RHF singlet orbitals.
:srcsample:`dfmp2-ecp`                                    Ne-Xe dimer MP2 energies with ECP, with electrons correlated then frozen.
:srcsample:`omp3-4`                                       SCS-OMP3 cc-pVDZ geometry optimization for the H2O molecule.
:srcsample:`extern2`                                      External potential calculation involving a TIP3P water and a QM water for DFMP2. Finite different test of the gradient is performed to validate forces.
:srcsample:`mints5`                                       Tests to determine full point group symmetry.  Currently, these only matter for the rotational symmetry number in thermodynamic computations.
:srcsample:`mbis-5`                                       MBIS calculation on ZnO
:srcsample:`cc3`                                          cc3: RHF-CCSD/6-31G** H2O geometry optimization and vibrational frequency analysis by finite-differences of gradients
:srcsample:`fsapt-diff1`                                  This test case shows an example of running and analyzing a difference F-SAPT0/jun-cc-pvdz procedure for phenol dimer from the S22 database.
:srcsample:`cbs-parser`                                   mtd/basis syntax examples
:srcsample:`cc9a`                                         ROHF-CCSD(T) cc-pVDZ energy for the :math:`^2\Sigma^+` state of the CN radical,  with Z-matrix input.
:srcsample:`dct7`                                         DCT calculation for the triplet O2 using ODC-06 and ODC-12 functionals.  Only simultaneous algorithm is tested.
:srcsample:`fci-dipole`                                   6-31G H2O Test FCI Energy Point
:srcsample:`scf-response3`                                UHF Dipole Polarizability Test
:srcsample:`opt7`                                         Various constrained energy minimizations of HOOH with cc-pvdz RHF. For "fixed" coordinates, the final value is provided by the user.
:srcsample:`cc13a`                                        UHF-CCSD(T)/cc-pVDZ :math:`^{3}B_1` CH2 geometry optimization via analytic gradients
:srcsample:`fsapt2`                                       A very quick correctness test of F-SAPT (see fsapt1 for a real example)
:srcsample:`pubchem1`                                     Benzene vertical singlet-triplet energy difference computation, using the PubChem database to obtain the initial geometry, which is optimized at the HF/STO-3G level, before computing single point energies at the RHF, UHF and ROHF levels of theory.
:srcsample:`opt3`                                         SCF cc-pVDZ geometry optimzation, with Z-matrix input
:srcsample:`frac-traverse`                                Scan fractional occupation of electrons updated values due to new BraggSlater radii
:srcsample:`nbody-convergence`                            Convergence of many-body gradients of different BSSE schemes
:srcsample:`cbs-xtpl-alpha`                               Extrapolated water energies
:srcsample:`extern3`                                      External potential calculation with one Ghost atom and one point charge at the same position.
:srcsample:`sapt-exch-disp-inf`                           SAPT0 with S^inf exch-disp20
:srcsample:`cbs-delta-energy`                             Extrapolated energies with delta correction
:srcsample:`dft1`                                         DFT Functional Test all values update for new BraggSlater radii
:srcsample:`scf-coverage`                                 Lithium test for coverage 
:srcsample:`soscf-dft`                                    Triple and Singlet Oxygen energy SOSCF, also tests non-symmetric density matrices
:srcsample:`dft-custom-mgga`                              updated dldf reference to new BraggSlater radii  Dispersionless density functional (dlDF+D) internal match to Psi4 Extensive testing has been done to match supplemental info of Szalewicz et. al., Phys. Rev. Lett., 103, 263201 (2009) and Szalewicz et. al., J. Phys. Chem. Lett., 1, 550-555 (2010)
:srcsample:`dft-vv10`                                     He Dimer VV10 functional test. notes: DFT_VV10_B/C overwrites the NL_DISPERSION_PARAMETERS tuple updated 'bench' reference values for new BraggSlater radii.
:srcsample:`fsapt1`                                       This test case shows an example of running and analyzing a standard F-SAPT0/jun-cc-pvdz procedure for phenol dimer from the S22 database.
:srcsample:`dfccsd-grad1`                                 DF-CCSD cc-pVDZ gradients for the H2O molecule.
:srcsample:`numpy-array-interface`                        Numpy interface testing
:srcsample:`tu1-h2o-energy`                               Sample HF/cc-pVDZ H2O computation
:srcsample:`dft-grad-lr3`                                 wB97X-D test for a large UKS molecule update ref gradient due to new BraggSlater radii
:srcsample:`mp2-def2`                                     Test case for Binding Energy of C4H5N (Pyrrole) with CO2 using MP2/def2-TZVPP 
:srcsample:`dfomp2-grad3`                                 Tests OMP2 gradient in the presence of a dipole field
:srcsample:`cc31`                                         CCSD/sto-3g optical rotation calculation (both gauges) at two frequencies on methyloxirane
:srcsample:`cc44`                                         Test case for some of the PSI4 out-of-core codes.  The code is given only 2.0 MB of memory, which is insufficient to hold either the A1 or B2 blocks of an ovvv quantity in-core, but is sufficient to hold at least two copies of an oovv quantity in-core.
:srcsample:`omp3-3`                                       OMP3 cc-pCVDZ energy with B3LYP initial guess for the NO radical
:srcsample:`sapt-ecp`                                     sapt0 of charged system in ECP basis set
:srcsample:`dct11`                                        Restricted DF-DCT ODC-12 energies with linearly dependent basis functions
:srcsample:`sapt3`                                        SAPT2+3(CCD) aug-cc-pVDZ+midbond computation of the water dimer interaction energy,  using the aug-cc-pVDZ-JKFIT DF basis for SCF and aug-cc-pVDZ-RI for SAPT.
:srcsample:`dft-grad-lr1`                                 wB97X-D cc-pVDZ gradient of S22 HCN update df/pk_ref values due to new BraggSlater radii
:srcsample:`opt-multi-frozen-dimer-c2h`                   Frozen-fragment opt of C2h methane dimer with user-combined reference points.
:srcsample:`casscf-sp`                                    CASSCF/6-31G** energy point
:srcsample:`mbis-3`                                       MBIS calculation on OH radical
:srcsample:`dfrasscf-sp`                                  6-31G** H2O Test RASSCF Energy Point will default to only singles and doubles in the active space
:srcsample:`opt-multi-dimer-c1`                           Multi-fragment opt of C2h methane dimer with user-combined reference points.
:srcsample:`scf-hess1`                                    RHF STO-3G (Cartesian) and cc-pVDZ (spherical) water Hessian test, against Psi3 reference values.
:srcsample:`ao-casscf-sp`                                 CASSCF/6-31G** energy point
:srcsample:`cisd-sp-2`                                    6-31G** H2O Test CISD Energy Point
:srcsample:`omp2p5-1`                                     OMP2.5 cc-pVDZ energy for the H2O molecule.
:srcsample:`fnocc6`                                       Test method/basis with disk_df
:srcsample:`cc43`                                         RHF-CC2-LR/STO-3G optical rotation of (S)-methyloxirane.  gauge = both, omega = (589 355 nm)
:srcsample:`nbody-vmfc-gradient`                          Computation of VMFC-corrected water trimer gradient (geometry from J. Chem. Theory Comput. 11, 2126-2136 (2015))
:srcsample:`cc48`                                         reproduces dipole moments in J.F. Stanton's "biorthogonal" JCP paper
:srcsample:`pywrap-opt-sowreap`                           Finite difference optimization, run in sow/reap mode.
:srcsample:`soscf-ref`                                    Triple and Singlet Oxygen energy SOSCF, also tests non-symmetric density matrices
:srcsample:`basis-ecp`                                    check mixing ECP and non-ECP orbital/fitting basis sets in a session
:srcsample:`dct2`                                         DC-06 calculation for the He dimer. This performs a two-step update of the orbitals and cumulant, using DIIS extrapolation. Four-virtual integrals are handled in the MO Basis.
:srcsample:`cc36`                                         CC2(RHF)/cc-pVDZ energy of H2O.
:srcsample:`dct-grad1`                                    Various DCT analytic gradients for the O2 molecule with 6-31G basis set
:srcsample:`sapt-compare`                                 SAPT0 aug-cc-pVDZ computation of the water-water interaction energy, using the three SAPT codes.
:srcsample:`cc37`                                         CC2(UHF)/cc-pVDZ energy of H2O+.
:srcsample:`dft-freq-analytic`                            Analytic SVWN frequencies, compared to finite difference values
:srcsample:`dfmp2-freq2`                                  DF-MP2 frequency by difference of energies for H2O
:srcsample:`cepa1`                                        cc-pvdz H2O Test CEPA(1) Energy
:srcsample:`omp2-grad1`                                   OMP2 cc-pVDZ gradient for the H2O molecule.
:srcsample:`dfcasscf-fzc-sp`                              CASSCF/6-31G** energy point
:srcsample:`ao-dfcasscf-sp`                               CASSCF/6-31G** energy point
:srcsample:`dft-b2plyp`                                   Double-hybrid density functional B2PYLP. Reproduces portion of Table I in S. Grimme's J. Chem. Phys 124 034108 (2006) paper defining the functional.
:srcsample:`dfmp2-2`                                      Density fitted MP2 energy of H2, using density fitted reference and automatic looping over cc-pVDZ and cc-pVTZ basis sets. Results are tabulated using the built in table functions by using the default options and by specifiying the format.
:srcsample:`scf-upcast-custom-basis`                      test scf castup with custom basis sets
:srcsample:`cc25`                                         Single point gradient of 1-2B2 state of H2O+ with EOM-CCSD
:srcsample:`dft-pruning`                                  Tests all grid pruning options available and screening of small weights. Check against grid size.
:srcsample:`psithon1`                                     Spectroscopic constants of H2, and the full ci cc-pVTZ level of theory
:srcsample:`mbis-4`                                       MBIS calculation on NaCl
:srcsample:`mp2-grad1`                                    MP2 cc-pVDZ gradient for the H2O molecule.
:srcsample:`scf3`                                         File retention, docc, socc, and bond distances specified explicitly.
:srcsample:`dfomp2-4`                                     OMP2 cc-pVDZ energy for the NO molecule.
:srcsample:`mints1`                                       Symmetry tests for a range of molecules.  This doesn't actually compute any energies, but serves as an example of the many ways to specify geometries in Psi4.
:srcsample:`mp2-grad2`                                    MP2 cc-pVDZ gradient for the NO radical
:srcsample:`cc1`                                          RHF-CCSD 6-31G** all-electron optimization of the H2O molecule
:srcsample:`cc8`                                          UHF-CCSD(T) cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the CN radical, with Z-matrix input.
:srcsample:`dfomp2-1`                                     OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`cc18`                                         RHF-CCSD-LR/cc-pVDZ static polarizability of HOF
:srcsample:`castup2`                                      SCF with various combinations of pk/density-fitting, castup/no-castup, and spherical/cartesian settings. Demonstrates that puream setting is getting set by orbital basis for all df/castup parts of calc. Demonstrates that answer doesn't depend on presence/absence of castup. Demonstrates (by comparison to castup3) that output file doesn't depend on options (scf_type) being set global or local. This input uses global.
:srcsample:`cisd-sp`                                      6-31G** H2O Test CISD Energy Point
:srcsample:`cbs-xtpl-dict`                                Extrapolated water energies
:srcsample:`scf-level-shift-cuhf`                         SCF level shift on a CUHF computation
:srcsample:`cdomp2-1`                                     OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`fci-tdm-2`                                    BH-H2+ FCI/cc-pVDZ Transition Dipole Moment
:srcsample:`mints6`                                       Patch of a glycine with a methyl group, to make alanine, then DF-SCF  energy calculation with the cc-pVDZ basis set
:srcsample:`opt10`                                        6-31G MP2 transition-state optimization with initial, computed Hessian.
:srcsample:`cbs-xtpl-gradient`                            Various gradients for a strained helium dimer and water molecule
:srcsample:`mcscf3`                                       RHF 6-31G** energy of water, using the MCSCF module and Z-matrix input.
:srcsample:`dft-grad-disk`                                A range-seperated gradient for SO2 to test disk algorithms by explicitly setting low memory 
:srcsample:`mints12`                                      test roundtrip-ness of dict repr for psi4.core.Molecule and qcdb.Molecule
:srcsample:`fd-gradient`                                  SCF STO-3G finite-difference tests
:srcsample:`lccd-grad2`                                   LCCD cc-pVDZ gradient for the NO radical
:srcsample:`fnocc2`                                       Test G2 method for H2O
:srcsample:`dfomp2-grad1`                                 DF-OMP2 cc-pVDZ gradients for the H2O molecule.
:srcsample:`cc8b`                                         ROHF-CCSD cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the  CN radical, with Cartesian input.
:srcsample:`scf-level-shift-rohf`                         SCF level shift on an ROHF computation
:srcsample:`pywrap-checkrun-uhf`                          This checks that all energy methods can run with a minimal input and set symmetry.
:srcsample:`x2c3`                                         Test of SFX2C-1e on Water uncontracted cc-pVDZ The reference numbers are from Lan Cheng's implementation in Cfour
:srcsample:`frac`                                         Carbon/UHF Fractionally-Occupied SCF Test Case 
:srcsample:`sapt2`                                        SAPT0 aug-cc-pVDZ computation of the benzene-methane interaction energy, using the aug-pVDZ-JKFIT DF basis for SCF, the aug-cc-pVDZ-RI DF basis for SAPT0 induction and dispersion, and the aug-pVDZ-JKFIT DF basis for SAPT0 electrostatics and induction. This example uses frozen core as well as asyncronous I/O while forming the DF integrals and CPHF coefficients.
:srcsample:`nbody-multi-level`                            Multilevel computation of water trimer energy (geometry from J. Chem. Theory Comput. 11, 2126-2136 (2015))
:srcsample:`scf-ecp2`                                     Water-Argon complex with ECP present; check of RHF Hessian
:srcsample:`pywrap-align`                                 apply linear fragmentation algorithm to a water cluster
:srcsample:`scf-level-shift-rks`                          SCF level shift on an RKS computation
:srcsample:`fci-coverage`                                 6-31G H2O Test for coverage
:srcsample:`dfccsdat1`                                    DF-CCSD(AT) cc-pVDZ energy for the H2O molecule.
:srcsample:`cc2`                                          6-31G** H2O CCSD optimization by energies, with Z-Matrix input
:srcsample:`omp2-5`                                       SOS-OMP2 cc-pVDZ geometry optimization for the H2O molecule.
:srcsample:`fsapt-d`                                      Tests SAPT0-D corrections, with a variety of damping functions/parameters
:srcsample:`matrix1`                                      An example of using BLAS and LAPACK calls directly from the Psi input file, demonstrating matrix multiplication, eigendecomposition, Cholesky decomposition and LU decomposition. These operations are performed on vectors and matrices provided from the Psi library.
:srcsample:`mints-helper`                                 A general test of the MintsHelper function
:srcsample:`cc10`                                         ROHF-CCSD cc-pVDZ energy for the :math:`^2\Sigma^+` state of the CN radical
:srcsample:`olccd3`                                       OLCCD cc-pVDZ energy with ROHF initial guess for the NO radical
:srcsample:`pywrap-freq-e-sowreap`                        Finite difference of energies frequency, run in sow/reap mode.
:srcsample:`dfmp2-3`                                      DF-MP2 cc-pVDZ frozen core gradient of benzene, computed at the DF-SCF cc-pVDZ geometry
:srcsample:`cepa2`                                        cc-pvdz H2O Test ACPF Energy/Properties
:srcsample:`cc34`                                         RHF-CCSD/cc-pVDZ energy of H2O partitioned into pair energy contributions.
:srcsample:`mints8`                                       Patch of a glycine with a methyl group, to make alanine, then DF-SCF  energy calculation with the cc-pVDZ basis set
:srcsample:`psimrcc-sp1`                                  Mk-MRCCSD single point. :math:`^3 \Sigma ^-` O2 state described using the Ms = 0 component of the triplet.  Uses ROHF triplet orbitals.
:srcsample:`density-screen-1`                             RHF Density Matrix based-Integral Screening Test for water
:srcsample:`fnocc7`                                       Test fnocc with linear dependencies
:srcsample:`sapt5`                                        SAPT0 aug-cc-pVTZ computation of the charge transfer energy of the water dimer.
:srcsample:`fsapt-ext-abc`                                FSAPT with external charge on trimer
:srcsample:`isapt1`                                       This test case shows an example of running and analyzing an FI-SAPT0/jun-cc-pvdz computation for 2,4-pentanediol (targeting the intramolecular hydrogen bond between the two hydroxyl groups)
:srcsample:`mints2`                                       A test of the basis specification.  A benzene atom is defined using a ZMatrix containing dummy atoms and various basis sets are assigned to different atoms.  The symmetry of the molecule is automatically lowered to account for the different basis sets.
:srcsample:`olccd-grad1`                                  OLCCD cc-pVDZ gradient for the H2O molecule.
:srcsample:`scf-level-shift-uhf`                          SCF level shift on a UHF computation
:srcsample:`pywrap-checkrun-rhf`                          This checks that all energy methods can run with a minimal input and set symmetry.
:srcsample:`omp3-2`                                       OMP3 cc-pCVDZ energy with ROHF initial guess for the NO radical
=======================================================   ============

